# mobilite_durable

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  Visualisation.md  main.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  tbump.toml
.github/workflows/: pre-commit.yaml  run-test.yaml
doc/: process.mermaid
src/: settings.py
src/api/: overpass.py
src/data/: transit.json
src/data/C2C/: Liste_iti_D4G_isere.csv
src/data/OSM/: bus_lines_isere.json  bus_lines_isere.parquet  bus_stop_isere.geojson  bus_stops_isere.geojson  bus_stops_isere.parquet
src/data/transportdatagouv/: 2025-09-04-datasets.json  2025-09-04-filtered_datasets.json  2025-09-08_lines_38.geojson  2025-09-08_lines_all.parquet  2025-09-08_stops_38.geojson  2025-09-08_stops_all.parquet  contour-france.geojson  datasets.json  filtered_datasets.json  lines_38.parquet  stops_38.parquet
src/models/: bus_line.py  bus_stop.py
src/notebooks/: 04-07-2025_lsorba_filter_gtfs_department.ipynb  2025-06-19_AReboud_EPSG.ipynb  2025-06-23_lsorba_itineraries_accessible.ipynb  2025-07-04_lsorba_filter_gtfs_department.ipynb  2025-07-27_AReboud_EPSG_EPupier_melt.ipynb  2025-09-10_lsorba_visualise_stops_diff.ipynb  2025-09-13_NicolasGrosjean_OSM.ipynb  2025-10-13_lsorba_TDG.ipynb  23-06-2025_lsorba_itineraries_accessible.ipynb
src/processors/: c2c.py  gtfs_extractor.py  osm.py  transportdatagouv.py  utils.py
src/scrapping/: README.md
src/scrapping/scrapping/: settings.py
src/scrapping/scrapping/spiders/: transit.py
src/tests/: test_downloader_mixin.py  test_osm.py
src/utils/: downloader_mixin.py  logger.py  processor_mixin.py
